# ZIPIFY

./: README.md  SimpleQtApp.pro
inc/: all_inc.hpp  bitReader.hpp  bitWriter.hpp  fileData.hpp  zipify.hpp
main/: CMakeLists.txt  a.out  bitBuffer.cpp  bitBuffer.hpp  gfg.cpp  main.cpp  out.zipo  test.cpp  test.txt  unprintable.txt
main/inc/: all_inc.hpp  bitReader.hpp  bitWriter.hpp  fileData.hpp  unzipify.hpp  zipify.hpp
main/src/: bitReader.cpp  bitWriter.cpp  fileData.cpp  main.cpp  unzipify.cpp  zipify.cpp
qt/: Makefile  SimpleQtApp  main.cpp
src/: bitReader.cpp  bitWriter.cpp  fileData.cpp  main.cpp  unzipify.cpp  zipify.cpp
test/: CMakeLists.txt  main.cpp
